tests/error/array_errors/new_array_check_fail.py
from guppylang.decorator import guppy
from guppylang.std.builtins import array


@guppy
def main() -> int:
    return array(1)


guppy.compile(main)