tests/error/array_errors/new_array_check_fail.err
Error: Type mismatch (at $FILE:7:11)
  | 
5 | @guppy
6 | def main() -> int:
7 |     return array(1)
  |            ^^^^^^^^ Expected expression of type `int`, got `array[?T, ?n]`

Guppy compilation failed due to 1 previous error
